--- a/index.html
+++ b/index.html
@@ -21,6 +21,51 @@
   </header>
   <div id="main" class="container">
     <!-- Timeblocks go here -->
+    <div class="row">
+      <h2 class="hour">9 AM</h2>
+      <textarea class="event description">Sample event</textarea>
+      <button id="save" class="saveBtn">💾</button>
+    </div>
+    <div class="row">
+      <h2 class="hour">10 AM</h2>
+      <textarea class="event description">Sample event</textarea>
+      <button id="save" class="saveBtn">💾</button>
+    </div>
+    <div class="row">
+      <h2 class="hour">11 AM</h2>
+      <textarea class="event description">Sample event</textarea>
+      <button id="save" class="saveBtn">💾</button>
+    </div>
+    <div class="row">
+      <h2 class="hour">12 PM</h2>
+      <textarea class="event description">Sample event</textarea>
+      <button id="save" class="saveBtn">💾</button>
+    </div>
+    <div class="row">
+      <h2 class="hour">1 PM</h2>
+      <textarea class="event description">Sample event</textarea>
+      <button id="save" class="saveBtn">💾</button>
+    </div>
+    <div class="row">
+      <h2 class="hour">2 PM</h2>
+      <textarea class="event description">Sample event</textarea>
+      <button id="save" class="saveBtn">💾</button>
+    </div>
+    <div class="row">
+      <h2 class="hour">3 PM</h2>
+      <textarea class="event description">Sample event</textarea>
+      <button id="save" class="saveBtn">💾</button>
+    </div>
+    <div class="row">
+      <h2 class="hour">4 PM</h2>
+      <textarea class="event description">Sample event</textarea>
+      <button id="save" class="saveBtn">💾</button>
+    </div>
+    <div class="row">
+      <h2 class="hour">5 PM</h2>
+      <textarea class="event description">Sample event</textarea>
+      <button id="save" class="saveBtn">💾</button>
+    </div>
 
   </div>
 
